--- a/templates/preset_2.html
+++ b/templates/preset_2.html
@@ -16,7 +16,7 @@
             --font-body: '{{ typography.body }}', sans-serif;
             --font-mono: '{{ typography.mono }}', monospace;
         }
-        {% include 'elegant-centered.css' %}
+        {% include 'preset_2.css' %}
     </style>
 </head>
 <body>
