--- a/templates/preset_3.html
+++ b/templates/preset_3.html
@@ -16,7 +16,7 @@
             --font-body: '{{ typography.body }}', sans-serif;
             --font-mono: '{{ typography.mono }}', monospace;
         }
-        {% include 'minimal-sidebar.css' %}
+        {% include 'preset_3.css' %}
     </style>
 </head>
 <body>
