--- a/templates/preset_4.html
+++ b/templates/preset_4.html
@@ -16,7 +16,7 @@
             --font-body: '{{ typography.body }}', sans-serif;
             --font-mono: '{{ typography.mono }}', monospace;
         }
-        {% include 'bold-stamp.css' %}
+        {% include 'preset_4.css' %}
     </style>
 </head>
 <body>
