--- a/templates/preset_5.html
+++ b/templates/preset_5.html
@@ -16,7 +16,7 @@
             --font-body: '{{ typography.body }}', sans-serif;
             --font-mono: '{{ typography.mono }}', monospace;
         }
-        {% include 'classic-letterhead.css' %}
+        {% include 'preset_5.css' %}
     </style>
 </head>
 <body>
