--- a/templates/preset_4.html
+++ b/templates/preset_4.html
@@ -26,8 +26,12 @@
 
     <header>
         <div class="company-brand">
+            {% if company.show_name %}
             <h1>{{ company.name }}</h1>
+            {% endif %}
+            {% if company.show_tagline %}
             <p>{{ company.tagline }}</p>
+            {% endif %}
         </div>
         <div class="quotation-id">
             <div class="label">{% if defaults.language == 'de' %}ANGEBOT{% else %}QUOTATION{% endif %}</div>
