--- a/templates/preset_4.css
+++ b/templates/preset_4.css
@@ -228,3 +228,13 @@ footer h4 {
 }
 
 
+
+/* Utility Classes */
+.page-break {
+    break-after: page;
+    page-break-after: always;
+    height: 0;
+    margin: 0;
+    padding: 0;
+    visibility: hidden;
+}
