--- a/templates/preset_5.html
+++ b/templates/preset_5.html
@@ -27,7 +27,7 @@
         <div class="brand-section">
             {% if company.show_logo and company.logo %}
             <div class="logo-container">
-                <img src="{{ company.logo }}" alt="{{ company.name }}" class="logo">
+                <img src="{{ company.logo }}" alt="{{ company.name }}" class="logo" style="width: {{ company.logo_width|default(40) }}mm; max-height: none; height: auto;">
             </div>
             {% endif %}
             <div class="company-details">
