--- a/templates/preset_1.html
+++ b/templates/preset_1.html
@@ -23,7 +23,7 @@
     <header>
         <div class="company-info">
             {% if company.show_logo and company.logo %}
-            <img src="{{ company.logo }}" alt="Logo" class="logo">
+            <img src="{{ company.logo }}" alt="Logo" class="logo" style="width: {{ company.logo_width|default(40) }}mm; max-height: none; height: auto;">
             {% endif %}
             {% if company.show_name %}
             <h1>{{ company.name }}</h1>
