--- a/templates/preset_2.html
+++ b/templates/preset_2.html
@@ -32,7 +32,7 @@
         <header>
             {% if company.show_logo and company.logo %}
             <div class="logo-wrapper">
-                <img src="{{ company.logo }}" alt="Logo" class="logo">
+                <img src="{{ company.logo }}" alt="Logo" class="logo" style="width: {{ company.logo_width|default(40) }}mm; max-height: none; height: auto;">
             </div>
             {% endif %}
             
